be: WIP: finalise refactoring to use OpenAPI
